--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   </head>
   <body>
     <h1>Cats vs Dogs: the Definitive Guide</h1>
-    
     <p>Welcome to the ultimate showdown between cats and dogs. May the best one win!</p>
-    <p>Here's why cats are great. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <p>Find out more about cats here.</p>
-
-    <p>Here's why dogs are great. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Find out more about dogs here.</p>
+    <div class="cats">
+       <p>Here's why cats are great. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+       <p>Find out more about cats here.</p>
+    </div> 
+    <div class="dogs">
+       <p>Here's why dogs are great. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       <p>Find out more about dogs here.</p>
+    </div>
     <p>Who will win? You will be the judge.</p>
   </body>
 </html>
